<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".MainActivity4">

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="61dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="28dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/menu"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_format_align_justify_24" />

    <RelativeLayout
        android:layout_width="336dp"
        android:layout_height="508dp"
        android:layout_marginStart="37dp"
        android:layout_marginBottom="51dp"
        android:background="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <LinearLayout
            android:layout_width="330dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/howToIns1"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/howToIns2"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/howToIns3"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/howToIns4"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/howToIns5"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/howToIns6"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/howToIns7"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/howToIns8"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/howToIns9"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/howToIns10"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/howToIns11"
                android:textColor="@color/white" />
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="53dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/howTo"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>