<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity3">

    <LinearLayout
        android:layout_width="257dp"
        android:layout_height="471dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="153dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="103dp"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:backgroundTint="@color/yellow"
            android:text="@string/play6" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:backgroundTint="@color/blue"
            android:text="@string/play5" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:backgroundTint="@color/yellow"
            android:text="@string/play4" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:backgroundTint="@color/blue"
            android:text="@string/play3" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:backgroundTint="@color/yellow"
            android:text="@string/play2" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/blue"
            android:text="@string/play1" />


    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="188dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/heading4"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="278dp"
        android:layout_marginTop="57dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/help"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_help_outline_24"
        app:tint="@color/black" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="61dp"
        android:layout_height="50dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/menu"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_format_align_justify_24" />
</androidx.constraintlayout.widget.ConstraintLayout>