<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".MainActivity6">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:contentDescription="@string/scrollview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="1000dp">

            <ImageButton
                android:id="@+id/imageButton13"
                android:layout_width="112dp"
                android:layout_height="112dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/cards"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/imageButton3"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                app:srcCompat="@drawable/baseline_help_outline_24" />

            <ImageButton
                android:id="@+id/imageButton14"
                android:layout_width="112dp"
                android:layout_height="112dp"
                android:layout_marginStart="22dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="22dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/cards"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toStartOf="@+id/imageButton4"
                app:layout_constraintStart_toEndOf="@+id/imageButton6"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                app:srcCompat="@drawable/baseline_help_outline_24" />

            <ImageButton
                android:id="@+id/imageButton15"
                android:layout_width="112dp"
                android:layout_height="112dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/cards"
                android:scaleType="fitXY"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:srcCompat="@drawable/baseline_help_outline_24" />

            <ImageButton
                android:id="@+id/imageButton10"
                android:layout_width="112dp"
                android:layout_height="112dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/cards"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/imageButton3"
                app:layout_constraintTop_toBottomOf="@+id/imageButton4"
                app:srcCompat="@drawable/baseline_help_outline_24" />

            <ImageButton
                android:id="@+id/imageButton11"
                android:layout_width="112dp"
                android:layout_height="112dp"
                android:layout_marginStart="22dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="22dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/cards"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toStartOf="@+id/imageButton4"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imageButton6"
                app:layout_constraintTop_toBottomOf="@+id/imageButton3"
                app:srcCompat="@drawable/baseline_help_outline_24" />

            <ImageButton
                android:id="@+id/imageButton12"
                android:layout_width="112dp"
                android:layout_height="112dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/cards"
                android:scaleType="fitXY"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageButton7"
                app:srcCompat="@drawable/baseline_help_outline_24" />

            <ImageButton
                android:id="@+id/imageButton7"
                android:layout_width="112dp"
                android:layout_height="112dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/cards"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toStartOf="@+id/imageButton3"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageButton6"
                app:srcCompat="@drawable/baseline_help_outline_24" />

            <ImageButton
                android:id="@+id/imageButton8"
                android:layout_width="112dp"
                android:layout_height="112dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/cards"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/imageButton3"
                app:layout_constraintTop_toBottomOf="@+id/imageButton13"
                app:srcCompat="@drawable/baseline_help_outline_24" />

            <ImageButton
                android:id="@+id/imageButton9"
                android:layout_width="112dp"
                android:layout_height="112dp"
                android:layout_marginStart="22dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="22dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/cards"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toStartOf="@+id/imageButton4"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/imageButton6"
                app:layout_constraintTop_toBottomOf="@+id/imageButton14"
                app:srcCompat="@drawable/baseline_help_outline_24" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="112dp"
                android:layout_height="112dp"
                android:layout_marginStart="22dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="22dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/cards"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toStartOf="@+id/imageButton4"
                app:layout_constraintStart_toEndOf="@+id/imageButton6"
                app:layout_constraintTop_toBottomOf="@+id/imageButton9"
                app:srcCompat="@drawable/baseline_help_outline_24" />

            <ImageButton
                android:id="@+id/imageButton6"
                android:layout_width="112dp"
                android:layout_height="112dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/cards"
                android:scaleType="fitXY"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageButton15"
                app:srcCompat="@drawable/baseline_help_outline_24" />

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="112dp"
                android:layout_height="112dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/cards"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageButton3"
                app:layout_constraintTop_toBottomOf="@+id/imageButton8"
                app:srcCompat="@drawable/baseline_help_outline_24" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="143dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="97dp"
                android:layout_height="27dp"
                android:layout_marginStart="47dp"
                android:layout_marginTop="90dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/timer"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="97dp"
                android:layout_height="27dp"
                android:layout_marginTop="90dp"
                android:layout_marginEnd="47dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/score"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="97dp"
                android:layout_height="27dp"
                android:layout_marginTop="88dp"
                android:layout_marginEnd="156dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/moves"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <Button
                android:id="@+id/button7"
                android:layout_width="112dp"
                android:layout_height="61dp"
                android:layout_marginStart="156dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="118dp"
                android:backgroundTint="@color/blue"
                android:text="@string/play"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageButton12"
                app:layout_constraintVertical_bias="1.0" />

            <Button
                android:id="@+id/replayButton"
                android:layout_width="112dp"
                android:layout_height="61dp"
                android:layout_marginTop="92dp"
                android:backgroundTint="@color/blue"
                android:text="Replay"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.525"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageButton12" />

            <ImageButton
                android:id="@+id/imageButton16"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="36dp"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/back"
                android:scaleType="fitXY"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_arrow_back_24" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>